# odoomap

./: .gitignore  LICENSE  README.md  odoomap.py  pyproject.toml  requirements.txt
src/: actions.py  colors.py  connect.py  core.py
src/data/: default_passwords.txt  default_usernames.txt
src/data/odoo_18/: v18-models.txt
